# bmc_controller

./: .gitignore  Cargo.toml  build-release.sh  package-lock.json  package.json  start-all.sh
app-bmc-detail/: index.html  package-lock.json  package.json  vite.config.ts
app-bmc-detail/src/: App.tsx
app-bmc-detail/src-tauri/: Cargo.toml  tauri.conf.json
app-bmc-detail/src-tauri/capabilities/: default.json
app-bmc-detail/src-tauri/config/: bmcs.json
app-bmc-monitor/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app-bmc-monitor/src/: App.tsx
app-bmc-monitor/src-tauri/: Cargo.toml  tauri.conf.json
app-router-manager/: index.html  package-lock.json  package.json  vite.config.ts
app-router-manager/src/: App.tsx  index.css  main.tsx
app-router-manager/src-tauri/: Cargo.toml  tauri.conf.json
backend/: Cargo.toml
backend/src/: cache.rs  config.rs  handlers.rs  main.rs  redfish.rs
bmc-manager/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
bmc-manager/src/: App.tsx  index.css
bmc-manager/src-tauri/: Cargo.toml  tauri.conf.json
bmc-manager/src-tauri/capabilities/: default.json
bmc-manager/src/api/: bmc.ts  (+1 more)
shared/api/: bmc.ts  client.ts  routers.ts  sensors.ts
shared/components/: AdminLoginPage.tsx  AuthGuard.tsx  BMCStatusBadge.tsx
shared/hooks/: useBMCList.ts  useBMCSensors.ts  useRouterList.ts  useSensorSummary.ts
shared/mocks/: bmc.ts  sensors.ts
shared/stores/: authStore.ts  rootStore.ts
shared/types/: index.ts
src/: lib.rs  main  main_01.rs  power_control.rs
(+45 files in other folders)
