[package]
name = "bmc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
tower-http = { version = "0.6", features = ["cors"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
